# VEGA-3D

./: .gitignore  README.md  index.html  pyproject.toml  setup.py
llava/: video_utils.py
llava/eval/: generative_eval_utils.py  model_multi3drefer.py  model_scan2cap.py  model_scanqa.py  model_scanrefer.py  model_sqa3d.py
llava/model/: builder.py  feature_fusion.py  llava_arch.py
llava/model/multimodal_generative_encoder/: MODEL_PREPARATION.md  __init__.py  builder.py  dinov3_online_encoder.py  sd21_online_encoder.py  svd_online_encoder.py  vae_online_encoder.py  vggt_online_encoder.py  vjepa_online_encoder.py  wan_t2v_encoder.py  wan_vace_encoder.py
llava/model/multimodal_projector/: builder.py
llava/train/: llava_trainer.py  train_3d.py
scripts/3d/eval/: eval_multi3drefer.sh  eval_scan2cap.sh  eval_scan2cap_lora.sh  eval_scanqa.sh  eval_scanrefer.sh  eval_sqa3d.sh
scripts/3d/preprocessing/: export_wan_prompt_embedding.py  extract_sd21_empty_prompt_embeds.py  extract_seva_offline_step1.sh  extract_seva_vmem_offline_step1_features.py  extract_vmem_offline_step1.sh
scripts/3d/train/: multi.yaml  train_baseline.sh  train_dinov3_online.sh  (+10 more)
scripts/evaluation/: eval.sh
scripts/preprocess/: process_scan2cap.py  process_threedod.py  process_vlm3r_data.py
scripts/train/: train_gen_dinov3_3b.sh  train_gen_dinov3_7b.sh  train_gen_sd21_3b.sh  train_gen_sd21_7b.sh  train_gen_svd_3b.sh  train_gen_svd_7b.sh  train_gen_vae_3b.sh  train_gen_vae_7b.sh  train_gen_vjepa_3b.sh  train_gen_vjepa_7b.sh  train_gen_wan_t2v_3b.sh  train_gen_wan_t2v_7b.sh  train_gen_wan_t2v_7b_avg.sh  train_gen_wan_vace_3b.sh  train_gen_wan_vace_7b.sh  train_sr_qwen3b.sh  train_sr_vgllm4b.sh
scripts/visualization/: README.md  _wan_vis_common.py  run_wan_adjacent.sh  run_wan_box_multiview.sh  run_wan_correspondence.sh  run_wan_triview_video.sh  wan_adjacent.py  wan_box_multiview.py  wan_correspondence.py  wan_t2v_adjacent_correspondence_matching.py  wan_triview_video.py
src/lmms_eval/: __main__.py
static/css/: index.css
static/js/: index.js
(+53 files in other folders)
